Generalize E2E Tests (#38)
* update e2e tests

* fix tests and fix bug

* add comments